tests/parser/parse-attribute.6.bad.error
error: Malformed repr :native attribute
  --> test:4:6
   |
 4 |  (repr :native :native :native)
   |        ^^^^^^^ unexpected form
