tests/parser/parse-attribute.6.bad.coalton
;; BAD: Parse Attribute
(package test-package)

(repr :native :native :native)
(define-type T)
